syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.models";

message BalanceCheckRequest {
  int32 account_number = 1;
}

message  Balance {
  int32 amount = 1;
}

message WithdrawRequest {
  int32 account_number = 1;
  int32 amount = 2;
}

message Money {
  int32 value = 1;
}

message DepositRequest {
  int32 account_number = 1;
  int32 amount = 2;
}

service BankService {
  rpc getBalance(BalanceCheckRequest) returns (Balance);

  rpc withdraw(WithdrawRequest) returns(stream Money);

  rpc cashDeposit(stream DepositRequest) returns(Balance);
}